--- a/JS_Dates/ja_date_get6.html
+++ b/JS_Dates/ja_date_get6.html
@@ -6,16 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JavaScript  Dates</h1>
-    <h2>The getFullYear() Method</h2>
-    <p>Return the full Year of a date Object:</p>
+    <h1>JavaScript Dates</h1>
+    <h2>The getTime() Method</h2>
+    <p>Return the number of milliseconds since midnight january 1, 1970:</p>
     <p id="demo"></p>
-
     <script>
-        const d= new Date("2021-03-25");
-        document.getElementById("demo").innerHTML=`${d.getFullYear()}`;
+        const d= new Date();
+        document.getElementById("demo").innerHTML=`${d.getTime()}`;
     </script>
-
-
 </body>
 </html>
