--- a/JS_Dates/js_date_get3.html
+++ b/JS_Dates/js_date_get3.html
@@ -6,16 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JavaScript  Dates</h1>
+    <h1>JavaScript Dates</h1>
     <h2>The getFullYear() Method</h2>
-    <p>Return the full Year of a date Object:</p>
+    <p>Return the full year of a date object:</p>
     <p id="demo"></p>
 
     <script>
-        const d= new Date("2021-03-25");
+        const d=new Date();
         document.getElementById("demo").innerHTML=`${d.getFullYear()}`;
     </script>
-
-
 </body>
 </html>
